Feature/editorconfig update (#47)
* Initial works with jspecify
* Moving development to info.jab.cli
* Adding flatten plugin
* Enabling jacoco
* Improving pom.xml
* Adding git information
* Adding support for .gitignore

* Minor change

* Updated changelog

* Minor change